47 - adjusted Default according to the updated logic; adjusted tests; expanded Java Docs